Changed auto-fit to auto-fill to prevent items for growing too much

--- a/src/sass/components/_media-showcase.scss
+++ b/src/sass/components/_media-showcase.scss
@@ -97,7 +97,7 @@
 
     &__list {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
         gap: 2rem;
         padding-bottom: 1rem;
         
